src/test/asg2/errors/duplicate_field.j
class Main {

Void main(Int i, Int a, Int b,Int d){
    i = a;
}
}
class Dummy {
    Int x;
    String x;
    String x;
    Bool x;
}
class Dummy {}
class A { Bool b;}